--- a/mermaid.html
+++ b/mermaid.html
@@ -7,6 +7,13 @@
     <title>Document</title>
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+        mermaid.initialize({ startOnLoad: false });
+
+        // Example of using the render function
+        const drawDiagram = async function (element, graphDefinition) {
+            const { svg } = await mermaid.render(element.id, graphDefinition);
+            element.innerHTML = svg;
+        };
     </script>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
 </head>
@@ -25,7 +32,7 @@
             const mapped = grist.mapColumnNames(record);
             console.log("mapped", mapped);
             const mermaid_el = document.getElementById('mermaid');
-            mermaid_el.innerHTML = mapped.mermaid;
+            await drawDiagram(mapped.mermaid)
         });
     </script>
 
