--- a/mermaid.html
+++ b/mermaid.html
@@ -29,7 +29,7 @@
     </script>
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-        mermaid.initialize({ startOnLoad: false });
+        mermaid.initialize({ startOnLoad: true });
     </script>
 
 </body>
