--- a/mermaid.html
+++ b/mermaid.html
@@ -24,7 +24,7 @@
             console.log("mapped", mapped);
             const mermaid_el_id = 'mermaid';
             document.getElementById(mermaid_el_id).innerHTML = mapped.mermaid;
-            mermaid.initialize({ startOnLoad: true });
+            mermaid.initialize();
         });
     </script>
     <script type="module">
