--- a/mermaid.html
+++ b/mermaid.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
-    <pre id="mermaid" class="mermaid">
+    <div id="mermaid">
+    <pre class="mermaid">
         graph LR
         A --- B
         B-->C[fa:fa-ban forbidden]
         B-->D(fa:fa-spinner);
     </pre>
+    </div>
     <script>
         grist.ready({ requiredAccess: 'read table', columns: ["mermaid"] });
         grist.onRecord(function (record) {
@@ -23,7 +25,7 @@
             const mapped = grist.mapColumnNames(record);
             console.log("mapped", mapped);
             const mermaid_el_id = 'mermaid';
-            document.getElementById(mermaid_el_id).innerHTML = mapped.mermaid;
+            document.getElementById(mermaid_el_id).innerHTML = `<pre class="mermaid">${mapped.mermaid}</pre>;
             mermaid.initialize();
         });
     </script>
