--- a/mermaid.html
+++ b/mermaid.html
@@ -29,7 +29,7 @@ I'm<!DOCTYPE html>
     </script>
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-        mermaidAPI.initialize({ startOnLoad: false });
+        mermaid.initialize({ startOnLoad: false });
     </script>
 
 </body>
