--- a/mermaid.html
+++ b/mermaid.html
@@ -24,9 +24,8 @@ I'm<!DOCTYPE html>
             console.log("mapped", mapped);
             const mermaid_el_id = 'mermaid';
             const el = document.getElementById(mermaid_el_id);
-            el.innerHtml = mapped.mermaid;
-            const graph = mapped.mermaid;
-            mermaid.render("graphDiv", graph).then( res => el.innerHtml = res.svg );
+            el.innerHTML = mapped.mermaid;
+            
     </script>
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
