--- a/mermaid.html
+++ b/mermaid.html
@@ -25,7 +25,9 @@
             const mermaid_el_id = 'mermaid';
             const el = document.getElementById(mermaid_el_id);
             el.innerHTML = mapped.mermaid;
-            
+            mermaid.run({
+  suppressErrors: true,
+}).then(()=>{});
     </script>
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
