--- a/mermaid.html
+++ b/mermaid.html
@@ -10,11 +10,8 @@
 </head>
 
 <body>
+
     <pre id="mermaid" class="mermaid">
-        graph LR
-        A --- B
-        B-->C[fa:fa-ban forbidden]
-        B-->D(fa:fa-spinner);
     </pre>
     <script>
         grist.ready({ requiredAccess: 'read table', columns: ["mermaid"] });
@@ -22,17 +19,25 @@
             console.log("record", record);
             const mapped = grist.mapColumnNames(record);
             console.log("mapped", mapped);
-            const mermaid_el_id = 'mermaid';
-            const el = document.getElementById(mermaid_el_id);
-            el.innerHTML = mapped.mermaid;
-            mermaid.run({
-                suppressErrors: true,
-            }).resolve();
+            const graphDefinition = mapped.mermaid;
+            runMermaid(graphDefinition).then((svg) => {
+                document.getElementById("mermaid").innerHTML = svg;
+            })
+
         });
     </script>
     <script type="module">
-            import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-            mermaid.initialize({ startOnLoad: false });
+        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+        mermaid.initialize({ startOnLoad: false });
+
+        async function runMermaid(graphDefinition) {
+
+            const { svg } = await mermaid.render('mermaid', graphDefinition);
+            return svg;
+        };
+
+        globalThis.runMermaid = runMermaid;
+
     </script>
 
 </body>
