add node rendering

--- a/node-parents-children/index.html
+++ b/node-parents-children/index.html
@@ -11,7 +11,7 @@
 <body>
     <main id="main">
         <div id="content">
-            Placeholder
+            <p>Node: <span id="node">Node Placeholder</span></p>
         </div>
     </main>
     <script src="./app.js"></script>
