--- a/node-parents-children/index.html
+++ b/node-parents-children/index.html
@@ -12,6 +12,18 @@
     <main id="main">
         <div id="content">
             <p>Node: <span id="node">Node Placeholder</span></p>
+            <section>
+                <h2>Parents</h2>
+                <ul id="parents">
+                    <li>Parent placeholder should be deleted</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Children</h2>
+                <ul id="children">
+                    <li>Child placeholder should be deleted</li>
+                </ul>
+            </section>
         </div>
     </main>
     <script src="./app.js"></script>
