linking nodes to table

--- a/node-parents-children/index.html
+++ b/node-parents-children/index.html
@@ -11,7 +11,7 @@
 <body>
     <main id="main">
         <div id="content">
-            <p>Node: <span id="node">Node Placeholder</span></p>
+            <p>Node: <span id="node"></span></p>
             <section>
                 <h2>Parents</h2>
                 <ul id="parents">
