refactored and reorganized

--- a/node-parents-children/index.html
+++ b/node-parents-children/index.html
@@ -6,24 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Node-Parents-Children Grist Widget</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    >
 </head>
 
 <body>
     <main id="main">
         <div id="content">
-            <p>Node: <span id="node"></span></p>
-            <section>
-                <h2>Parents</h2>
-                <ul id="parents">
-                    <li>Parent placeholder should be deleted</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Children</h2>
-                <ul id="children">
-                    <li>Child placeholder should be deleted</li>
-                </ul>
-            </section>
+            Content Placeholder
         </div>
     </main>
     <script src="./app.js"></script>
