--- a/mermaid/index.html
+++ b/mermaid/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="mermaid-svg">Place Holder</div>
+    <div id="mermaid-test"></div>
     <script type="module" src="./app.js"></script>
-</body>
-
+  </body>
 </html>
